tests/ui/required-with-skip-setter.stderr
error: Required fields cannot skip setters. Remove #[builder(skip_setter)] or make the field optional by removing #[builder(required)]
 --> tests/ui/required-with-skip-setter.rs:7:5
  |
7 |     name: String,
  |     ^^^^

error[E0599]: no function or associated item named `builder` found for struct `InvalidStruct` in the current scope
  --> tests/ui/required-with-skip-setter.rs:13:36
   |
4  | struct InvalidStruct {
   | -------------------- function or associated item `builder` not found for this struct
...
13 |     let _instance = InvalidStruct::builder()
   |                                    ^^^^^^^ function or associated item not found in `InvalidStruct`
